--- a/index.html
+++ b/index.html
@@ -334,48 +334,77 @@ h3.custom-heading {
 
 
 
-/* ===== FORM SECTION ===== */
+/* ===== MODERN FORM SECTION ===== */
 #groupForm {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 12px;
-  background: #ffffff;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  justify-content: space-between;
+  gap: 15px;
+  background: rgba(255,255,255,0.15);
+  backdrop-filter: blur(12px);
+  padding: 25px;
+  border-radius: 20px;
+  box-shadow: 0 8px 32px rgba(0,0,0,0.1);
   max-width: 500px;
-  margin: 20px auto;
+  margin: 30px auto;
   font-family: "Segoe UI", sans-serif;
+  border: 1px solid rgba(255,255,255,0.3);
+  transition: 0.3s;
+}
+
+#groupForm h2 {
+  width: 100%;
+  font-size: 24px;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+  text-shadow: 0 2px 5px rgba(0,0,0,0.3);
 }
 
 #groupForm input {
   flex: 1 1 180px;
   min-width: 120px;
-  padding: 12px 15px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
+  padding: 12px 18px;
+  border-radius: 12px;
+  border: none;
+  background: rgba(255,255,255,0.25);
+  color: #fff;
   font-size: 14px;
+  outline: none;
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+#groupForm input::placeholder {
+  color: rgba(255,255,255,0.7);
+}
+
+#groupForm input:focus {
+  background: rgba(255,255,255,0.35);
+  box-shadow: 0 0 8px #25D366;
 }
 
 #groupForm button {
   flex: 1 1 120px;
   min-width: 100px;
   padding: 12px 20px;
-  border-radius: 8px;
+  border-radius: 12px;
   border: none;
-  background: #25D366;
+  background: linear-gradient(135deg, #25D366, #1ebe5d);
   color: white;
   font-weight: bold;
   cursor: pointer;
-  transition: 0.3s;
+  font-size: 15px;
+  transition: 0.4s;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.2);
 }
 
 #groupForm button:hover {
-  background: #128C7E;
+  transform: translateY(-2px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.3);
 }
 
-/* ===== GROUP CARDS ===== */
+/* ===== MODERN GROUP CARDS ===== */
 #groupsList {
   display: flex;
   flex-wrap: wrap;
@@ -390,16 +419,18 @@ h3.custom-heading {
   align-items: center;
   justify-content: space-between;
   width: 350px;
-  background: #fff;
-  border-radius: 15px;
-  padding: 15px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  transition: transform 0.2s, box-shadow 0.2s;
+  background: rgba(255,255,255,0.15);
+  backdrop-filter: blur(12px);
+  border-radius: 20px;
+  padding: 15px 20px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+  border: 1px solid rgba(255,255,255,0.3);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .group-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+  transform: translateY(-5px) scale(1.02);
+  box-shadow: 0 12px 30px rgba(0,0,0,0.25);
 }
 
 .group-info {
@@ -419,32 +450,34 @@ h3.custom-heading {
 .group-info h3 {
   margin: 0;
   font-size: 18px;
-  color: #333;
+  color: #fff;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
 
 /* ===== JOIN BUTTON ===== */
 .join-btn {
-  background: #25D366;
+  background: linear-gradient(135deg, #25D366, #128C7E);
   color: white;
   border: none;
   padding: 10px 18px;
-  border-radius: 10px;
+  border-radius: 12px;
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.4s;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 }
 
 .join-btn:hover {
-  background: #128C7E;
+  transform: translateY(-2px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.3);
 }
 
 /* ===== RESPONSIVE ===== */
 @media (max-width: 480px) {
   #groupForm {
     flex-direction: column;
-    gap: 12px;
-    padding: 15px;
+    gap: 15px;
   }
   #groupForm input, #groupForm button {
     flex: 1 1 100%;
@@ -460,7 +493,12 @@ h3.custom-heading {
   }
 }
 
-
+/* BACKGROUND FOR MODERN TECH LOOK */
+body {
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+  min-height: 100vh;
+  color: white;
+}
 
 /* ===== RESPONSIVE ===== */
 @media (max-width: 768px) {
