--- a/privacy.html
+++ b/privacy.html
@@ -235,59 +235,45 @@
   if (!firebase.apps.length) {
     firebase.initializeApp(firebaseConfig);
   }
-
   const auth = firebase.auth();
 
-  // Allowed admin email
+  // ✅ Only this Gmail can access Admin Panel
   const ADMIN_EMAIL = "rchaurasiyaself1@gmail.com";
 
-  // Handle login form submit
+  // ✅ Handle login
   document.getElementById("adminLoginForm").addEventListener("submit", async (e) => {
     e.preventDefault();
     const email = document.getElementById("adminEmail").value;
     const password = document.getElementById("adminPassword").value;
+    const loginStatus = document.getElementById("loginStatus");
 
     try {
       const userCredential = await auth.signInWithEmailAndPassword(email, password);
       const user = userCredential.user;
 
       if (user.email === ADMIN_EMAIL) {
-        document.getElementById("loginStatus").innerHTML = "✅ Logged in as Admin";
-        document.getElementById("logoutBtn").style.display = "block";
+        loginStatus.innerHTML = "✅ Logged in as Admin. Redirecting...";
+        
+        // 🔥 Admin page पर redirect
+        setTimeout(() => {
+          window.location.href = "admin.html";
+        }, 1000);
+
       } else {
-        document.getElementById("loginStatus").innerHTML = "⛔ Not Authorized";
+        loginStatus.innerHTML = "⛔ Not Authorized";
         await auth.signOut();
       }
     } catch (error) {
-      document.getElementById("loginStatus").innerHTML = "⚠️ " + error.message;
+      loginStatus.innerHTML = "⚠️ " + error.message;
     }
   });
 
-  // Handle logout
+  // ✅ Handle logout
   document.getElementById("logoutBtn").addEventListener("click", async () => {
     await auth.signOut();
     document.getElementById("loginStatus").innerHTML = "✅ Logged out";
     document.getElementById("logoutBtn").style.display = "none";
   });
-  firebase.auth().signInWithEmailAndPassword(email, password)
-  .then((userCredential) => {
-    const user = userCredential.user;
-
-    // सिर्फ वही Gmail login कर पाए जो admin है
-    if (user.email === "labccna455@gmail.com") {
-      loginStatus.innerHTML = "✅ Logged in as Admin";
-
-      // 🔥 Login होते ही admin page पर redirect करो
-      window.location.href = "admin.html";  
-    } else {
-      loginStatus.innerHTML = "⛔ Not Authorized";
-      firebase.auth().signOut();
-    }
-  })
-  .catch((error) => {
-    loginStatus.innerHTML = "❌ Login failed: " + error.message;
-  });
-
 </script>
 
   <footer>
