--- a/privacy.html
+++ b/privacy.html
@@ -208,6 +208,23 @@
     <h2>6. Updates</h2>
     <p>We may update this Privacy Policy periodically. Please check this page regularly to stay informed.</p>
   </div>
+  <!-- 🔥 Admin Login Form (only for Admin) -->
+<div style="margin-top:50px; padding:20px; border:1px solid #ddd; max-width:400px;">
+  <h3>Admin Login</h3>
+  <form id="adminLoginForm">
+    <label>Email</label><br>
+    <input type="email" id="adminEmail" placeholder="Enter admin email" required style="width:100%; padding:8px; margin:5px 0;"><br>
+    
+    <label>Password</label><br>
+    <input type="password" id="adminPassword" placeholder="Enter password" required style="width:100%; padding:8px; margin:5px 0;"><br>
+    
+    <button type="submit" style="padding:10px 15px; background:green; color:white; border:none; cursor:pointer;">Login</button>
+  </form>
+
+  <p id="loginStatus" style="margin-top:10px; color:red;"></p>
+  <button id="logoutBtn" style="display:none; margin-top:10px; padding:10px; background:red; color:white; border:none; cursor:pointer;">Logout</button>
+</div>
+
 <script>
   // ✅ Firebase config
   const firebaseConfig = {
